added social block, info(+slogon) and btn, stylize all elements

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,37 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Honey world</title>
 </head>
+
 <body>
   <img src="img/SKULL LIGHT.jpg" alt="mainimg" class="img__main">
   <div class="logo">
     <img src="img/HOENY LOGO.png" alt="Logo">
   </div>
-  <div class="menu">
+  <nav>
     <ul>
       <li>Contact</li>
       <li>Videos</li>
       <li>Store</li>
       <li>Home</li>
     </ul>
+  </nav>
+  <div class="social__media">
+    <ul>
+      <li>
+        <img src="img/Twitter Square.png" alt="twitter">
+      </li>
+      <li>
+        <img src="img/Facebook Square.png" alt="facebook">
+      </li>
+      <li>
+        <img src="/img/Instagram Square.png" alt="inst">
+      </li>
+    </ul>
   </div>
+  <div class="info">
+    #<span>BE</span>CREATIVE
+  </div>
+  <div class="btn">CLICK HERE</div>
 </body>
+
 </html>
