--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
 
 <body>
+
+  <!-- Beginning main background section-->
   <img src="img/SKULL LIGHT.jpg" alt="mainimg" class="img__main">
   <div class="logo">
     <img src="img/HOENY LOGO.png" alt="Logo">
   </div>
+  <!-- End of main background section-->
+
+  <!-- Beginning navigation section (left)-->
   <nav>
     <ul>
       <li>Contact</li>
@@ -22,6 +27,9 @@
       <li>Home</li>
     </ul>
   </nav>
+  <!-- End of  navigation section (left) -->
+
+  <!-- Beginning social-media section (right)-->
   <div class="social__media">
     <ul>
       <li>
@@ -35,9 +43,16 @@
       </li>
     </ul>
   </div>
-  <div class="info">
-    #<span>BE</span>CREATIVE
+  <!-- End of social-media section (right)-->
+
+  <!-- Beginning slogon section -->
+  <div class="slogon">
+    #
+    <span>BE</span>CREATIVE
   </div>
+  <!-- End of slogon section -->
+
+  <!-- btn -->
   <div class="btn">CLICK HERE</div>
 </body>
 
