added hover effect

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
   <!-- Beginning main background section-->
-  <img src="img/SKULL LIGHT.jpg" alt="mainimg" class="img__main">
+  <img src="img/SKULL_LIGHT.jpg" alt="mainimg" class="img__main">
   <div class="logo">
-    <img src="img/HOENY LOGO.png" alt="Logo">
+    <img src="img/HOENY_LOGO.png" alt="Logo">
   </div>
   <!-- End of main background section-->
 
@@ -33,27 +33,21 @@
   <div class="social__media">
     <ul>
       <li>
-        <img src="img/Twitter Square.png" alt="twitter">
+        <img src="img/Twitter_Square.png" alt="twitter">
       </li>
       <li>
-        <img src="img/Facebook Square.png" alt="facebook">
+        <img src="img/Facebook_Square.png" alt="facebook">
       </li>
       <li>
-        <img src="/img/Instagram Square.png" alt="inst">
+        <img src="/img/Instagram_Square.png" alt="inst">
       </li>
     </ul>
   </div>
   <!-- End of social-media section (right)-->
 
-  <!-- Beginning slogon section -->
-  <div class="slogon">
-    #
-    <span>BE</span>CREATIVE
-  </div>
-  <!-- End of slogon section -->
 
   <!-- btn -->
-  <div class="btn">CLICK HERE</div>
+  <div class="btn">#BECREATIVE</div>
 </body>
 
 </html>
