fixed problem with social-img №3

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="img/Facebook_Square.png" alt="facebook">
       </li>
       <li>
-        <img src="/img/Instagram_Square.png" alt="inst">
+        <img src="img/Instagram_Square.png" alt="inst">
       </li>
     </ul>
   </div>
